force-app/main/default/objects/OrderRequest__c/OrderRequest__c.object-meta.xml
<CustomObject>
    <description>Stores customer order headers for Alma Natural Cosmetics. Each order contains one or more order lines with products and quantities.</description>
    <label>Order Request</label>
    <nameField>
        <displayFormat>ORD-{0000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>