force-app/main/default/objects/OrderRequest__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Order_Requests</relationshipName>
    <relationshipLabel>Order Requests</relationshipLabel>
    <description>Customer who placed this order.</description>
</CustomField>