force-app/main/default/objects/OrderRequest__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Internal notes about the order — special instructions, delivery details or customer requests.</description>
    <inlineHelpText>Internal notes about the order — special instructions, delivery details or customer requests</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>