force-app/main/default/objects/OrderRequest__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Total order amount calculated automatically by Flow summing all order lines including container deposits.</description>
</CustomField>