force-app/main/default/objects/OrderRequest__c/fields/Total_Amount_Ana__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Ana__c</fullName>
    <description>Roll up summary from Order line items</description>
    <label>Total Amount Ana</label>
    <summarizedField>OrderRequestLineItem__c.Line_Total__c</summarizedField>
    <summaryForeignKey>OrderRequestLineItem__c.OrderRequest__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>