force-app/main/default/objects/OrderRequest__c/listViews/All_Order_request.listView-meta.xml
<ListView>
    <fullName>All_Order_request</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Order request</label>
</ListView>